@@ -20,7 +20,6 @@ import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -137,7 +136,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
 
         // The setpoint mode is controlled by the name of setpoint attribute sent to the thermostat.
         // Temporary mode uses setpoint names prefixed with "t_" while absolute mode uses "a_"
-        if (config.setpointMode.equals("absolute")) {
+        if ("absolute".equals(config.setpointMode)) {
             this.setpointCmdKeyPrefix = "a_";
         }
 
@@ -185,7 +184,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(RadioThermostatThingActions.class);
+        return List.of(RadioThermostatThingActions.class);
     }
 
     /**
@@ -287,6 +286,15 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     public void dispose() {
         logger.debug("Disposing the RadioThermostat handler.");
         connector.removeEventListener(this);
+
+        // Disable Remote Temp and Message Area on shutdown
+        if (isLinked(REMOTE_TEMP)) {
+            connector.sendCommand("rem_mode", "0", REMOTE_TEMP_RESOURCE);
+        }
+
+        if (isLinked(MESSAGE)) {
+            connector.sendCommand("mode", "0", PMA_RESOURCE);
+        }
 
         ScheduledFuture<?> refreshJob = this.refreshJob;
         if (refreshJob != null) {
@@ -471,18 +479,18 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             State state = null;
             if (value == null) {
                 state = UnDefType.UNDEF;
-            } else if (value instanceof PointType) {
-                state = (PointType) value;
-            } else if (value instanceof ZonedDateTime) {
-                state = new DateTimeType((ZonedDateTime) value);
-            } else if (value instanceof QuantityType<?>) {
-                state = (QuantityType<?>) value;
-            } else if (value instanceof Number) {
-                state = new DecimalType((Number) value);
+            } else if (value instanceof PointType pointCommand) {
+                state = pointCommand;
+            } else if (value instanceof ZonedDateTime zonedDateTimeCommand) {
+                state = new DateTimeType(zonedDateTimeCommand);
+            } else if (value instanceof QuantityType<?> quantityCommand) {
+                state = quantityCommand;
+            } else if (value instanceof Number numberCommand) {
+                state = new DecimalType(numberCommand);
             } else if (value instanceof String) {
                 state = new StringType(value.toString());
-            } else if (value instanceof OnOffType) {
-                state = (OnOffType) value;
+            } else if (value instanceof OnOffType onOffCommand) {
+                state = onOffCommand;
             } else {
                 logger.warn("Update channel {}: Unsupported value type {}", channelId,
                         value.getClass().getSimpleName());
@@ -500,7 +508,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     /**
      * Update a given channelId from the thermostat data
      *
-     * @param the channel id to be updated
+     * @param channelId the channel id to be updated
      * @param data the RadioThermostat dto
      * @return the value to be set in the state
      */
